--- a/.github/workflows/tf.yml
+++ b/.github/workflows/tf.yml
@@ -1,8 +1,8 @@
 name: Terraform Action
 on:
   push:
-    branches-ignore:
-      - main
+    branches:
+      - ch6-manage-secrets
 
 jobs:
   terraform-plan:
